--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@reach/portal": "^0.15.0",
         "@reduxjs/toolkit": "^1.6.0",
         "@tailwindcss/forms": "^0.3.3",
+        "@types/jest": "^26.0.23",
         "axios": "^0.21.1",
         "body-scroll-lock": "^3.1.5",
         "classnames": "^2.3.1",
@@ -99,7 +100,7 @@
         "husky": "^6.0.0",
         "identity-obj-proxy": "^3.0.0",
         "isomorphic-unfetch": "^3.1.0",
-        "jest": "^27.0.5",
+        "jest": "^27.0.6",
         "lint-staged": "^11.0.0",
         "nock": "^13.1.0",
         "postcss": "^8.3.5",
