--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
+        "testExecute":"yarn build && yarn start",
         "clean": "rimraf \"{.next,dist,build,out}\"",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
@@ -19,7 +20,7 @@
         "test": "jest -c test/jest.config.js",
         "cypress:open": "cypress open",
         "cypress:run": "cypress run --config video=false",
-        "cypress:test": "start-server-and-test build && start http://localhost:3000 cypress:run"
+        "cypress:test": "start-server-and-test start http://localhost:3000 cypress:run"
     },
     "dependencies": {
         "@apollo/client": "^3.3.20",
