Fix Cypress Test - isolatedModules tsconfig.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,12 @@
             }
         }
     ],
+    "prettier/prettier": [
+        "error",
+        {
+            "endOfLine": "auto"
+        }
+    ],
     "env": {
         "node": true,
         "browser": true,
