Linting steps added again

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "apollo:download-schema": "apollo client:download-schema schema.graphql",
         "apollo:generate-types": "rm -rf __generated__ && apollo client:codegen --target typescript --outputFlat",
         "apollo:sync": "npm run apollo:download-schema && npm run apollo:generate-types",
-        "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
-        "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
+        "lint": "eslint --rule \"no-unused-vars: off\" \"**/*.{js,jsx,ts,tsx}\" --fix",
+        "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
         "test": "jest -c test/jest.config.js",
         "cypress:open": "cypress open",
         "cypress:run": "cypress run --config video=false",
