--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,8 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            # - name: Run lint
-            #   run: yarn lint
+            - name: Run lint
+              run: yarn lint
 
             - name: Run tests
               run: yarn test
