Added more example

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,5 +19,13 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:prettier/recommended"
-    ]
+    ],
+    "rules": {
+        "prettier/prettier": [
+            "error",
+            {
+                "endOfLine": "auto"
+            }
+        ]
+    }
 }
