--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,13 @@
         "plugin:prettier/recommended"
     ],
     "rules": {
+        "no-unused-vars": 0,
+        "@typescript-eslint/no-unused-vars": [
+            2,
+            {
+                "args": "none"
+            }
+        ],
         "prettier/prettier": [
             "error",
             {
